<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="165dp"
                    android:layout_height="220dp"
                    android:clickable="true"
                    android:id="@+id/fragment0_iv"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <CheckBox
                    android:paddingRight="5dp"
                    android:layout_marginBottom="@dimen/fragment0_cb_bottom_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vkontakte"
                    android:id="@+id/vk"
                    android:background="@color/grey_light"
                    android:textColor="#ffffffff"/>

                <CheckBox
                    android:layout_marginBottom="@dimen/fragment0_cb_bottom_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instagram"
                    android:id="@+id/instagram"
                    android:background="@color/grey_light"
                    android:textColor="#ffffffff"/>

                <CheckBox
                    android:layout_marginBottom="@dimen/fragment0_cb_bottom_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:id="@+id/facebook"
                    android:background="#3b5998"
                    android:textColor="#ffffffff"/>

                <CheckBox
                    android:layout_marginBottom="@dimen/fragment0_cb_bottom_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter"
                    android:id="@+id/twitter"
                    android:background="#55ACEE"
                    android:textColor="#ffffffff"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/linkedIn"
                    android:id="@+id/linkedin"
                    android:background="#287bbc"
                    android:textColor="#ffffffff"/>
            </LinearLayout>
        </LinearLayout>

            <EditText
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:hint="Enter message..."
                android:id="@+id/fragment0_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <SeekBar
        android:padding="15dp"
        android:maxHeight="4dp"
        android:minHeight="4dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:progressDrawable="@drawable/fragment0_sb_progress"
        android:thumb="@drawable/fragment0_sb_thumb"
        android:id="@+id/fragment0_sb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:id="@+id/fragment0_tv"
        android:text="Will be posted now"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>